# labs-strategic-expansion

./: .gitignore  Apresentacao_Case_ZCTAs.md  Dockerfile  README.md  compose.yml  main.py  pyproject.toml
docs/: ConclusaoHipoteses.md  PlanoEstruturado.md  RecomendacoesZCTA.md
notebooks/: 01_dataset_cleanned.ipynb  01_dataset_exploration.ipynb  02_eda.ipynb  H1_economic_demographic_potential.ipynb  H2_actual_exams_performace.ipynb  H5_strategic_and_loyalty.ipynb
reports/: exames_por_local.html
src/: aggregations.py  geo_utils.py  sanitize.py  utils.py  viz_aggregations.py  viz_map.py  zcta_pipeline.py
