[project]
name = "labs-strategic-expansion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "notebook",
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "scikit-learn",
    "seaborn>=0.13.2",
    "folium>=0.19.5",
    "geopandas>=1.0.1",
]
